full_code_without_full_design

--- a/Full cms without design/webui/lmApp/src/app/customer-login/customer-login.component.html
+++ b/Full cms without design/webui/lmApp/src/app/customer-login/customer-login.component.html
@@ -4,7 +4,12 @@
     <input type="text" name="userName" [(ngModel)]="userName" /> <br/><br/> 
     Password : 
     <input type="password" name="passWord" [(ngModel)]="passWord"  /> <br/><br/> 
-    <input type="button" value="Login" (click)="validate()" />
+    <!-- <input type="button" value="Login" (click)="validate()" /> -->
+    <!-- <button class ="button" style="vertical-align:middle" value="Login" (click)="validate()"><span> Login </span></button> &nbsp;&nbsp;&nbsp;&nbsp; -->
+     <div class="text-box">
+        <!-- <button class ="button" style="vertical-align:middle" value="Login" (click)="validate()"><span> Login </span></button> &nbsp;&nbsp;&nbsp;&nbsp; -->
+        <button class="btn btn-white btn-animate" value="Login" (click)="validate()">Login</button>
+    </div> 
 </form>
 <p *ngIf="count > 1">
     <b>Invalid Credentials...</b>
