--- a/Full cms without design/webui/lmApp/src/app/customer-info/customer-info.component.html
+++ b/Full cms without design/webui/lmApp/src/app/customer-info/customer-info.component.html
@@ -1,8 +1,46 @@
-<p>customer-info works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+   
+    <style>
+        h2 {
+         text-align: center;
+         font-family: Arial, Helvetica, sans-serif;
+         font-size: large;
+         color: blueviolet;
+        }
+        p {
+       /* border-top-style: solid;
+       border-right-style: solid;
+       border-bottom-style: solid;
+       border-left-style: solid;
+       border-bottom-style: solid; */
+       padding-left: 100px;
+       text-align: center;
+       font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+       font-size :x-large;
+       color:crimson;
+       /* background: url(https://cdn.pixabay.com/photo/2017/08/12/10/13/background-2633962_960_720.jpg) no-repeat center center; */
+       /* background-size: cover; */
+       /* margin: 25px 50px 75px; */
+}
+    </style>
+</head>
+<body>
+    <p>
+        Customer Id :    {{(customer | async)?.cusId}} <br/>
+        Customer Name :  {{(customer | async)?.cusName}}  <br/>
+        Customer Email : {{(customer | async)?.cusEmail}}  <br/>
+        Customer Mobile : {{(customer | async)?.cusMobile}}<br/>
+        Customer Date Of Birth : {{(customer | async)?.cusDob}} <br/>
+        Customer Address :  {{(customer | async)?.cusAddress}}<br/>
+    </p>
+</body>
+</html>
 
-Customer Id :    {{(customer | async)?.cusId}} <br/>
-Customer Name :  {{(customer | async)?.cusName}}  <br/>
-Customer Email : {{(customer | async)?.cusEmail}}  <br/>
-Customer Mobile : {{(customer | async)?.cusMobile}}<br/>
-Customer Date Of Birth : {{(customer | async)?.cusDob}} <br/>
-Customer Address :  {{(customer | async)?.cusAddress}}<br/>
+
+
