--- a/Full cms without design/webui/lmApp/src/app/vendor-accept-and-reject/vendor-accept-and-reject.component.html
+++ b/Full cms without design/webui/lmApp/src/app/vendor-accept-and-reject/vendor-accept-and-reject.component.html
@@ -1,13 +1,57 @@
-<p>vendor-acceptedor-rejected-order works!</p>
+<!-- <p>vendor-acceptedor-rejected-order works!</p> -->
+<!DOCTYPE html>
+<html>
+<style>
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#example2 {
+    width: 10%;
+    height: 5%;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px #888888;
+}
+input[type=submit] {
+  height:20%;
+  width:12%;
+  background-color: #4CAF50;
+  color: rgb(247, 243, 240);
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
+input[type=submit]:hover {
+
+  background-color: #45a049;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
+<body>
 <form>
-    Vendor Id : 
+        <div id="example2"> Vendor Id : </div>
     <input type="number" name="vendId" [(ngModel)]="vendId" /> <br/><br/> 
-    Order Id : 
+        <div id="example2"> Order Id : </div>
     <input type="number" name="orderId" [(ngModel)]="orderId" /> <br/><br/> 
-    Status : 
+        <div id="example2"> Status : </div>
     <input type="text" name="status" [(ngModel)]="status" /> <br/><br/> 
-    <input type="button" value="Accept or Reject Order" (click)="acceptOrReject()" /> <br/><br/>
+
+    <b><input type="submit" value="Submit" (click)="acceptOrReject()"> </b>
+
     {{result}}
 
 </form>
