--- a/Full cms without design/webui/lmApp/src/app/vendor-order-history/vendor-order-history.component.html
+++ b/Full cms without design/webui/lmApp/src/app/vendor-order-history/vendor-order-history.component.html
@@ -1,4 +1,24 @@
-<p>vendor-order-history works!</p>
+<html>
+<head>
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+</head>
+<body>
 <table border="3">
     <tr>
         <th>ORDER ID</th>
